# Medi_bot

./: .gitignore  README.md  frontend.py  main.py  pyproject.toml
backend/: ai_agent.py  main.py  tools.py
fine_tune_medi_model/: AI_Doctor.ipynb  ai_doctor.py
voice_vision_agent/: Pipfile  brain_of_doc.py  gradio_app.py  voice_doc.py  voice_patient.py
