[project]
name = "med-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "langchain>=1.2.6",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.6",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.53.0",
    "twilio>=9.9.1",
    "uvicorn>=0.40.0",
]
